# AgentUX

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  contributing.md  faq.md  installation.md  monitoring.md  quickstart.md  scoring.md  security.md
examples/: browser_run.sh  cli_evaluation.sh  markdown_comparison.sh  mcp_evaluation.sh
examples/monitors/: cli-onboarding.yaml  docs-comparison.yaml  mcp-tools.yaml  pricing-monitor.yaml
scripts/: demo.tape  dev-setup.sh  install.sh
src/agentux/: __init__.py  __main__.py
src/agentux/agents/: __init__.py  anthropic_backend.py  base.py  mock.py  openai_backend.py
src/agentux/analyzers/: __init__.py  affordance.py  base.py  coverage.py  friction.py  llm_analyzer.py  pipeline.py
src/agentux/cli/: __init__.py  app.py  formatters.py
src/agentux/cli/commands/: alerts.py  compare.py  config_cmd.py  doctor.py  export_cmd.py  init_cmd.py  inspect_cmd.py  monitor.py  replay.py  run.py  trends.py
src/agentux/core/: __init__.py  config.py  exceptions.py  models.py  runner.py  trace.py
src/agentux/export/: __init__.py  csv_export.py  json_export.py  markdown_export.py
src/agentux/fixtures/: demo_data.py
src/agentux/replay/: __init__.py  player.py
src/agentux/scheduler/: __init__.py  alerts.py  monitor.py  scheduler.py
src/agentux/scoring/: __init__.py  definitions.py  engine.py  metrics.py
src/agentux/storage/: __init__.py  database.py  models.py
src/agentux/surfaces/: __init__.py  base.py  browser.py  cli_surface.py  markdown.py  mcp.py  mock.py
src/agentux/tui/: __init__.py  app.py
src/agentux/tui/screens/: alerts.py  comparison.py  coverage.py  home.py  live_run.py  replay.py  trends.py
src/agentux/utils/: branding.py  console.py  sandbox.py
tests/: conftest.py  test_adversarial.py  test_agents.py  test_analyzers.py  test_config.py  test_export.py  test_replay.py  test_scoring.py  test_storage.py  test_surfaces.py
(+7 files in other folders)
